# cctx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PROJECT_STATE.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/context/: add-system.md  adr.md  health.md  init.md  list.md  status.md  sync.md  validate.md
plugin/eval/: rubric.md  runner.py
plugin/eval/fixtures/: INDEX.md  README.md  VALIDATION_NOTES.md
plugin/eval/fixtures/empty-project/: README.md
plugin/eval/fixtures/healthy-project/.ctx/: graph.json  knowledge.db
plugin/eval/fixtures/healthy-project/.ctx/systems/example/.ctx/: constraints.md  debt.md  decisions.md  snapshot.md
plugin/eval/fixtures/healthy-project/.ctx/systems/example/.ctx/adr/: ADR-001.md
plugin/eval/fixtures/partial-project/.ctx/: graph.json  knowledge.db
plugin/eval/fixtures/partial-project/src/core/: index.ts
plugin/eval/fixtures/partial-project/src/systems/auth/: index.ts
plugin/eval/fixtures/unhealthy-project/.ctx/: graph.json  knowledge.db
plugin/eval/fixtures/unhealthy-project/.ctx/systems/example/.ctx/: constraints.md  debt.md  decisions.md  snapshot.md
plugin/eval/fixtures/unhealthy-project/.ctx/systems/example/.ctx/adr/: ADR-001.md
plugin/eval/test-cases/: add-system.yaml  adr.yaml  health.yaml  init.yaml  list.yaml  status.yaml  sync.yaml  validate.yaml
plugin/hooks/: pre-write-ctx-check.sh
plugin/skills/living-context/: SKILL.md
src/cctx/: adr_crud.py  cli.py  cli_utils.py  config.py  crud.py  database.py  graph.py  scaffolder.py  schema.py  template_manager.py
src/cctx/data/: __init__.py
src/cctx/fixers/: __init__.py  adr_fixer.py  base.py  graph_fixer.py  registry.py  scaffolding_fixer.py  snapshot_fixer.py  utils.py
src/cctx/templates/: __init__.py  adr.template.md  constraints.template.md  decisions.template.md
src/cctx/validators/: __init__.py  adr_validator.py  debt_auditor.py  freshness_checker.py  git_helper.py  markdown_parser.py  path_filter.py  runner.py  snapshot_validator.py
src/lctx/: __init__.py  adr_crud.py  cli.py  cli_utils.py  config.py  crud.py  database.py  graph.py  scaffolder.py  schema.py  template_manager.py
src/lctx/data/: __init__.py  schema.sql
src/lctx/fixers/: __init__.py  adr_fixer.py  base.py  graph_fixer.py  registry.py  scaffolding_fixer.py  snapshot_fixer.py
src/lctx/templates/: debt.template.md  snapshot.template.md
src/lctx/validators/: __init__.py  adr_validator.py  base.py  debt_auditor.py  freshness_checker.py  runner.py  snapshot_validator.py
tests/: __init__.py  conftest.py  test_adr_crud.py  test_cli.py  test_cli_utils.py  test_config.py  test_crud.py  test_database.py  test_eval_runner.py  test_fixers.py  test_git_helper.py  test_graph.py  test_init_plugin.py  test_markdown_parser.py  test_scaffolder.py  test_templates.py  test_validators.py  test_validators_base.py
